2006-07-16  Alex Roitman  <shura@gramps-project.org>
	* src/Filters/Rules/Person/_IsChildOfFilterMatch.py
	(IsChildOfFilterMatch.init_list): Convert to child_ref.
	* src/plugins/Checkpoint.py (Checkpoint.run_tool): Add busy cursor.

2006-07-16  Zsolt Foldvari  <zsolt.foldvari@nokia.com>
	* src/ViewManager.py: Custom name format support.
	* src/GrampsCfg.py: Custom name format support.
	* src/RelLib/_Name.py: Custom name format support.
	* src/Editors/_EditName.py: Custom name format support.
	* src/glade/gramps.glade: Custom name format support.
	* src/NameDisplay.py: Custom name format support.

2006-07-15  Don Allingham  <don@gramps-project.org>
	* src/Config/_GrampsConfigKeys.py: remove unused USE_LDS key
	* data/gramps.schemas.in: remove unused USE_LDS key
	* src/StartupDialog.py: remove uused USE_LDS key

2006-07-14  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_GrampsBSDDB.py: disable TXN for readonly dbs
	* src/DbLoader.py (DbLoader.read_file): handle DBAccessError

2006-07-12  Brian Matherly  <brian@gramps-project.org>
	* src/ReportBase/_CommandLineReport.py: missing import - CustomFilters
	* src/plugins/NarrativeWeb.py: HTML validation fixes

2006-07-12  Don Allingham  <don@gramps-project.org>
	* src/Filters/Rules/Family/_RegExpIdOf.py: new family filter
	* src/Filters/Rules/Family/_HasNoteRegexp.py: new family filter
	* src/Filters/Rules/Family/_HasIdOf.py: new family filter
	* src/Filters/Rules/Family/__init__.py: add new filters
	* src/Filters/Rules/Family/_HasNoteMatchingSubstringOf.py: new family filter
	* src/Filters/Rules/Family/_AllFamilies.py: new family filter
	* src/Filters/Rules/_HasNoteSubstrBase.py: new common bases
	* src/Filters/Rules/_RegExpIdBase.py: new common bases
	* src/Filters/Rules/_HasGrampsId.py: new common bases
	* src/Filters/Rules/Person/__init__.py: update
	* src/Filters/Rules/Person/_HasIdOf.py: use new common base
	* src/Filters/Rules/Person/_HasNoteRegexp.py: use new common base